[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/Menus/MenuPrincipal-pt.png" type="Texture" id=1]
[ext_resource path="res://src/Scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/FontsFree-Net-Barosa-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/Menus/Fundo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/WorkSans-VariableFont_wght.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/prefab/buttonHolver.tres" type="StyleBox" id=6]
[ext_resource path="res://src/prefab/buttonNormal.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 150
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1343.18 ]
}

[node name="Menu" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 960, 540 )

[node name="Botoes" type="VBoxContainer" parent="Menu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -70.0
margin_right = -500.0
margin_bottom = 290.0
rect_min_size = Vector2( 500, 360 )
size_flags_vertical = 4
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JogarBotao" type="ToolButton" parent="Menu/Botoes"]
margin_right = 500.0
margin_bottom = 60.0
rect_min_size = Vector2( 360, 60 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
action_mode = 0

[node name="Label" type="Label" parent="Menu/Botoes/JogarBotao"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.5
margin_top = -24.0
margin_right = 128.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "start    Jogar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstrucoesBotao" type="ToolButton" parent="Menu/Botoes"]
margin_top = 80.0
margin_right = 500.0
margin_bottom = 140.0
rect_min_size = Vector2( 500, 60 )

[node name="Label" type="Label" parent="Menu/Botoes/InstrucoesBotao"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.5
margin_top = -24.0
margin_right = 231.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "instructions    Instruções"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SobreBotao" type="ToolButton" parent="Menu/Botoes"]
anchor_left = -0.004
anchor_right = -0.004
margin_top = 160.0
margin_right = 500.0
margin_bottom = 220.0
rect_min_size = Vector2( 500, 60 )

[node name="Label" type="Label" parent="Menu/Botoes/SobreBotao"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -24.0
margin_right = 142.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "about    Sobre"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditosBotao" type="ToolButton" parent="Menu/Botoes"]
margin_top = 240.0
margin_right = 500.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 60 )

[node name="Label" type="Label" parent="Menu/Botoes/CreditosBotao"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = -24.0
margin_right = 188.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "credits    Creditos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Control" parent="Menu"]
margin_left = 100.0
margin_top = 40.0
margin_right = 800.0
margin_bottom = 914.0
rect_min_size = Vector2( 800, 914 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Titulo"]
custom_fonts/font = SubResource( 5 )
text = "Scenic
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="Menu/Titulo"]
margin_left = 90.0
margin_top = 120.0
custom_fonts/font = SubResource( 5 )
text = "World
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Idioma" type="VBoxContainer" parent="Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 40.0
margin_bottom = 226.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Idioma"]
margin_right = 300.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 6 )
text = "Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Idioma"]
margin_top = 155.0
margin_right = 300.0
margin_bottom = 169.0
custom_constants/separation = 50

[node name="en" type="TextureButton" parent="Menu/Idioma/HBoxContainer"]
margin_bottom = 14.0

[node name="Label" type="Label" parent="Menu/Idioma/HBoxContainer/en"]
margin_right = 40.0
margin_bottom = 14.0
text = "en"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="barra" type="Label" parent="Menu/Idioma/HBoxContainer"]
margin_left = 50.0
margin_right = 55.0
margin_bottom = 14.0
text = "/"

[node name="pt" type="TextureButton" parent="Menu/Idioma/HBoxContainer"]
margin_left = 105.0
margin_right = 105.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="Menu/Idioma/HBoxContainer/pt"]
margin_right = 40.0
margin_bottom = 14.0
text = "pt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="PanelContainer"]
visible = false
texture = ExtResource( 1 )
offset = Vector2( 960, 540 )

[connection signal="pressed" from="Menu/Botoes/JogarBotao" to="." method="_on_JogarBotao_pressed"]
[connection signal="pressed" from="Menu/Botoes/InstrucoesBotao" to="." method="_on_InstrucoesBotao_pressed"]
[connection signal="pressed" from="Menu/Botoes/SobreBotao" to="." method="_on_SobreBotao_pressed"]
[connection signal="pressed" from="Menu/Botoes/CreditosBotao" to="." method="_on_CreditosBotao_pressed"]
[connection signal="pressed" from="Menu/Idioma/HBoxContainer/en" to="." method="_on_en_pressed"]
